--- a/main.html
+++ b/main.html
@@ -8,7 +8,48 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <h1>Myntra Size Chart</h1>
+
+	<table>
+		<thead>
+			<tr>
+				 <th>Size (cm)</th>
+                <th>Chest (inches)</th>
+                <th>Waist (inches)</th>
+                <th>Hip (inches)</th>
+			</tr>
+		</thead>
+
+		  <tbody>
+            <tr>
+                <td>Small</td>
+                <td>34-36</td>
+                <td>28-30</td>
+                <td>34-36</td>
+            </tr>
+            <tr>
+                <td>Medium</td>
+                <td>38-40</td>
+                <td>32-34</td>
+                <td>38-40</td>
+            </tr>
+            <tr>
+                <td>Large</td>
+                <td>42-44</td>
+                <td>36-38</td>
+                <td>42-44</td>
+            </tr>
+            <tr>
+                <td>Extra Large</td>
+                <td>46-48</td>
+                <td>40-42</td>
+                <td>46-48</td>
+            </tr>
+        </tbody>
+		
+	</table>
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
