--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <h1>Myntra Size Chart</h1>
+    <h1>Size Chart</h1>
 
 	<table>
 		<thead>
