--- a/main.html
+++ b/main.html
@@ -1,57 +1,55 @@
 <!DOCTYPE html>
-<!-- 
+ 
 <html>
-
+ 
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+ 
 <body>
 	<!-- the entire body must be written by student -->
-    <h1>Size Chart</h1>
-
 	<table>
-		<thead>
+       <thead>
+		 <tr>
+		   <th>Part</th>
+		   <th>XS</th>
+		   <th>S</th>
+		   <th>M</th>
+		   <th>L</th>
+		   <th>XL</th>
+	    </tr> 
+	   </thead>
+		<tbody>
 			<tr>
-				<th>Size (cm)</th>
-                <th>Chest (inches)</th>
-                <th>Waist (inches)</th>
-                <th>Hip (inches)</th>
+				<td>Waist</td>
+				<td>25</td>
+				<td>28</td>
+			    <td>30</td>
+			    <td>31</td>
+			    <td>32</td>
 			</tr>
-		</thead>
-
-		  <tbody>
-            <tr>
-                <td>Small</td>
-                <td>34-36</td>
-                <td>28-30</td>
-                <td>34-36</td>
-            </tr>
-            <tr>
-                <td>Medium</td>
-                <td>38-40</td>
-                <td>32-34</td>
-                <td>38-40</td>
-            </tr>
-            <tr>
-                <td>Large</td>
-                <td>42-44</td>
-                <td>36-38</td>
-                <td>42-44</td>
-            </tr>
-            <tr>
-                <td>Extra Large</td>
-                <td>46-48</td>
-                <td>40-42</td>
-                <td>46-48</td>
-            </tr>
-        </tbody>
-		
+		   <tr>
+				<td>Chest</td>
+				<td>34</td>
+				<td>34</td>
+			    <td>38</td>
+			    <td>40</td>
+			    <td>41</td>
+			</tr>
+		    <tr>
+				<td>Sleeve</td>
+				<td>23</td>
+				<td>24</td>
+			    <td>24</td>
+			    <td>25</td>
+			    <td>25</td>
+			</tr>
+		</tbody>
 	</table>
-	
-	<script type="text/javascript" src="./script.js">
+    <script type="text/javascript" src="./script.js">
 </script>
-
+ 
 </body>
-
-</html> -->
+ 
+</html>
+ 
