--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
  
 <body>
 	<!-- the entire body must be written by student -->
-	<table>
+	<table method="POST">
        <thead>
 		 <tr>
 		   <th>Part</th>
